--- a/index.html
+++ b/index.html
@@ -211,6 +211,15 @@
 										<button type="submit" class="commbtn gray">문의하기</button>
 									</div>
 								</div>
+								<div class="thankyou_message">
+									<section>
+										<h1>작성완료되었습니다.</h1>
+										<p>확인 후 빠르게 답변드리겠습니다.</p>
+										<div class="btn_box">
+											<a href="#" class="commbtn gray close">닫기</a>
+										</div>
+									</section>
+								</div>
 							</fieldset>
 						</form>
 					</section>
@@ -227,6 +236,7 @@
 	</section>
 	<script type="text/javascript" src="./js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="./js/ui.js"></script>
+	<script data-cfasync="false" type="text/javascript" src="./js/form-submission-handler.js"></script>
 </body>
 
 </html>
